<resources>
    <string name="app_name">ShoeStore</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>

    <!-- Login UI -->
    <string name="login">Login</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="login_title_for_toolbar">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_login">Create a new login?</string>

    <!-- Welcome UI -->
    <string name="welcome">Welcome</string>
    <string name="welcome_fragment">Welcome Fragment</string>
    <string name="welcome_title_for_toolbar">@string/welcome</string>
    <string name="welcome_text_part_one">In a world full of mobile applications, it is very important to develop relevant user interfaces, with proper design principles.</string>
    <string name="welcome_text_part_two">Changing environment always open new opportunities, with more mobile hardware being created and available to people, new demanding contexts appear.</string>

    <!-- Instructions UI -->
    <string name="instructions">Instructions</string>
    <string name="instructions_fragment">Instructions Fragment</string>
    <string name="instructions_title_for_toolbar">@string/instructions</string>
    <string name="instructions_text_part_one">The next screen will show a list of all the shoes stored in the application, you can scroll down to see more items.</string>
    <string name="instructions_text_part_two">You can \'Logout\' tapping at the top right corner, it is possible to create a new shoe by tapping the plus button.</string>

    <!-- Listing UI -->
    <string name="listing">Shoes List</string>
    <string name="listing_fragment">Listing Fragment</string>
    <string name="listing_title_for_toolbar">@string/listing</string>
    <string name="listing_begin_empty">Shoes list empty. Tap \'+\' button to create a NEW shoe</string>

    <!-- Detail UI -->
    <string name="detail">Create New Shoe</string>
    <string name="detail_fragment">Detail Fragment</string>
    <string name="detail_title_for_toolbar">@string/detail</string>
    <string name="detail_name">Name:</string>
    <string name="detail_company">Company:</string>
    <string name="detail_size">Size:</string>
    <string name="detail_description">Description:</string>
    <string name="detail_cancel">Cancel</string>
    <string name="detail_save">Save</string>
    <string name="detail_not_possible_to_create">Shoe name is blank!</string>

</resources>