<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Login">

    <fragment
        android:id="@+id/Login"
        android:name="com.udacity.shoestore.ui.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_fromLogin_toWelcome"
            app:destination="@id/Welcome"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/Welcome"
        android:name="com.udacity.shoestore.ui.WelcomeFragment"
        android:label="@string/welcome_fragment"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_fromWelcome_toInstructions"
            app:destination="@id/Instructions"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/Instructions"
        android:name="com.udacity.shoestore.ui.InstructionsFragment"
        android:label="@string/instructions_fragment"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_fromInstructions_toListing"
            app:destination="@id/Listing"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/Listing"
        android:name="com.udacity.shoestore.ui.ListingFragment"
        android:label="@string/listing_fragment"
        tools:layout="@layout/fragment_listing">
        <action
            android:id="@+id/action_fromListing_toLogin"
            app:destination="@id/Login"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/Login"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_fromListing_toDetail"
            app:destination="@id/Detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/Detail"
        android:name="com.udacity.shoestore.ui.DetailFragment"
        android:label="@string/detail_fragment"
        tools:layout="@layout/fragment_detail" />

</navigation>