<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout was not chosen, because, it was hard to locate the 'Next' -->
    <!-- button at the bottom right corner of the screen.                       -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_margin"
        tools:context=".ui.WelcomeFragment">

        <TextView
            android:id="@+id/welcomePartOneTxtv"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_part_one"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomePartTwoTxtv"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin"
            android:text="@string/welcome_text_part_two"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomePartOneTxtv" />

        <Button
            android:id="@+id/welcomeNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>